--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 Mako==1.0.7
 MarkupSafe==1.0
-django==1.2
+aniso8601==7.0.0
+attrs==19.2.0
+dominate==2.3.4
+importlib-metadata==0.18
+jsonschema==3.0.1
+six==1.12.0
+zipp==0.5.2
+feedgen==0.8.0
+validators==0.12.2
+colander==1.2
